clock and more link buttons

--- a/react-startpage/src/components/Header/Header.css
+++ b/react-startpage/src/components/Header/Header.css
@@ -1,7 +1,10 @@
 .Header{
     background-color: #2b2b2b;
     color: #fbfbfb;
-    height: 50px;
+    height: 25px;
     width: 100%;
     grid-row: 1;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
 }
