--- a/react-startpage/src/components/Header/Header.css
+++ b/react-startpage/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 .Header{
     background-color: #2b2b2b;
     color: #fbfbfb;
-    height: 25px;
+    height: fit-content;
     width: 100%;
     grid-row: 1;
     display: grid;
